[package]
name = "xvm"
version = "0.1.0"
authors = ["Evgeny Yakovlev <insoreiges@gmail.com>"]

[dependencies]
num = "0.1.0"
rlibc = "1.0.0"
log = "*"
time = "*"
lazy_static = "*"
hypervisor_framework = { git = "https://github.com/warfish/Hypervisor-framework-rs" }
capstone = { git = "https://github.com/richo/capstone-rs" }

[features]
default = []
guest-tracing = []
